<resources>
    <string name="app_name">Session5</string>
    <string name="wallet">Wallet</string>
    <string name="track">Track</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="special_for_you">Special for you</string>
    <string name="search_services">Search services</string>
    <string name="chats">Chats</string>
    <string name="search_for_a_driver">Search for a driver</string>
    <string name="what_would_you_like_to_do">What would you like to do</string>
</resources>