<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <RelativeLayout
        android:id="@+id/component_2"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- drawable/rectangle_3.xml -->


        <RelativeLayout
            android:id="@+id/frameTrack"
            android:layout_width="33dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="246dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textTrack"
                android:layout_width="33dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/roboto"
                android:lineHeight="14sp"
                android:text="@string/track"
                android:textAlignment="center"
                android:textColor="#A7A7A7"
                android:textFontWeight="400"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnTrack"
                android:layout_width="39dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="14dp"
                android:backgroundTint="#00FFFFFF"
                app:icon="@drawable/track"
                app:iconGravity="textEnd"
                app:iconSize="24sp"
                app:iconTint="#A7A7A7"
                app:layout_constraintBottom_toTopOf="@+id/textTrack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frameProfile"
            android:layout_width="33dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="360dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textProfile"
                android:layout_width="33dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/roboto"
                android:lineHeight="14sp"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="#A7A7A7"
                android:textFontWeight="400"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="14dp"
                android:backgroundTint="#FFFFFF"
                app:icon="@drawable/profile"
                app:iconGravity="textEnd"
                app:iconPadding="0dp"
                app:iconSize="20dp"
                app:iconTint="#A7A7A7" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/frameWallet"
            android:layout_width="33dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="246dp"
            android:layout_marginBottom="16dp">


            <Button
                android:id="@+id/Wallet"
                android:layout_width="39dp"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="14dp"
                android:backgroundTint="#00FFFFFF"
                app:icon="@drawable/wallet"
                app:iconGravity="textEnd"
                app:iconSize="24sp"
                app:iconTint="#A7A7A7"
                app:layout_constraintBottom_toTopOf="@+id/textWallet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textWallet"
                android:layout_width="33dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/roboto"
                android:lineHeight="14sp"
                android:text="@string/wallet"
                android:textAlignment="center"
                android:textColor="#A7A7A7"
                android:textFontWeight="400"
                android:textSize="12sp" />

        </RelativeLayout>

        <View
            android:id="@+id/rectangle_3"
            android:layout_width="42dp"
            android:layout_height="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="357dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/img_3"
            android:elevation="2dp" />

        <RelativeLayout
            android:id="@+id/frameHome"
            android:layout_width="33dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="360dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/textHome"
                android:layout_width="33dp"
                android:layout_height="14dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/roboto"
                android:lineHeight="14sp"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="#0560FA"
                android:textFontWeight="400"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="19dp"
                android:scaleType="centerCrop"
                android:src="@drawable/home" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cards"
        android:layout_width="341dp"
        android:layout_height="341dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.797">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="341dp"
            android:layout_height="159dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="182dp"
            android:importantForAccessibility="no"
            android:src="@drawable/img_1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="178dp"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="4dp"
            android:importantForAccessibility="no"
            android:src="@drawable/img_2" />

        <ImageButton
            android:id="@+id/imgBtnChats"
            android:layout_width="159dp"
            android:layout_height="159dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="179dp"
            android:layout_marginTop="178dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/whitebluechats"
            android:importantForAccessibility="no" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="What would you like to do"
        android:textColor="#0560FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <RelativeLayout
        android:id="@+id/frame_55"
        android:layout_width="341dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="93dp"
            android:layout_height="19dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="-4dp"
            android:layout_marginEnd="248dp"
            android:layout_marginBottom="1dp"
            android:text="@string/special_for_you"
            android:textColor="#EC8000" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="314dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:importantForAccessibility="no"
            android:src="@drawable/img" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="341dp"
        android:layout_height="34dp"
        android:background="@drawable/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="231dp"
            android:layout_marginBottom="9dp"
            android:text="@string/search_services"
            android:textColor="#A7A7A7"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="319dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="11dp"
            android:importantForAccessibility="no"
            android:src="@drawable/search1" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="341dp"
        android:layout_height="91dp"
        android:src="@drawable/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="342dp"
        android:layout_height="64dp"
        android:importantForAccessibility="no"
        android:src="@drawable/reklama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316" />
</androidx.constraintlayout.widget.ConstraintLayout>